[build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
# requires = ["setuptools>=42", "wheel", "pybind11>=2.10.1"]
# build-backend = "setuptools.build_meta"
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "tyssue"
authors = [
  { name = "Guillaume Gay", email = "guillaume@damcb.com" },
  { name = "all Tyssue contributors"}
]
description = "tyssue is a living tissues, cell level, modeling library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  # "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  # "Typing :: Typed",
]
#version = "1.0.pre"
license.file = "LICENSE"
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "nox",
  "pytest",
  "pytest-cov",
  "scikit-build-core"
]
dev = [
  "pytest",
  "pytest-cov",
  "scikit-build-core",
  "pre-commit",
]
docs = [
  "Sphinx",
  "myst_parser",
  "sphinx-book-theme",
  "sphinx_copybutton",
]

[project.urls]
Homepage = "https://githib.com/damcb/tyssue"
"Bug Tracker" = "https://githib.com/damcb/tyssue/issues"
Discussions = "https://githib.com/damcb/tyssue/discussions"
Changelog = "https://githib.com/damcb/tyssue/releases"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

sdist.exclude = [".github"]
sdist.include = [
  "CMakeLists.txt",
  "src/tyssue/_version.py",
]
cmake.verbose = true

[tool.setuptools_scm]
write_to = "src/tyssue/_version.py"


[tool.cibuildwheel]
test-command = "make test"
build-verbosity = 1

[tool.setuptools.package-dir]
tyssue = "tyssue"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra",
  "--showlocals",
  "--strict-markers",
  "--strict-config",
#  "--docker-compose=tests/omero/docker-compose.yml",
 ]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "default::ResourceWarning"
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.mypy]
files = "src"
python_version = "3.10"
warn_unused_configs = true
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true


[tool.flake8]
max-line-length = 88
ignore = ["W605", "W503", "E203"]


[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",  "B904",  # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
]
extend-ignore = ["PLR", "E501"]
target-version = "py310"
src = ["src"]
unfixable = ["T20", "F841"]

[tool.ruff.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.10"
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "wrong-import-position",
]
