## Process this file with automake to produce Makefile.in

tyssue_PYTHON = \
    __init__.py \
    dl_import.py

tyssuedir = $(MOD_DIR)

tyssue_core_PYTHON = \
    core/__init__.py\
    core/objects.py
tyssue_coredir = $(MOD_DIR)/core


tyssue_draw_PYTHON = \
    draw/__init__.py \
    draw/mpl_draw.py \
    draw/vispy_draw.py

tyssue_draw_DATA = \
     draw/tyssue-logo.svg

tyssue_drawdir = $(MOD_DIR)/draw


EXTRA_DIST = $(tyssue_draw_DATA)
